[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trackle"
version = "0.0.1"
description = "Local-first, git-aware ML experiment tracking."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Your Name", email = "you@example.com" }]
license = { text = "MIT" }

[project.urls]
Homepage = "https://example.com/trackle"

[project.scripts]
trackle = "trackle.cli.main:main"

[tool.setuptools.packages.find]
include = ["trackle*"]

