[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trackle-ml"
version = "0.1.0"
description = "Local-first, git-aware ML experiment tracking."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Trackle Developers", email = "dev@trackle.local" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://example.com/trackle"

[project.scripts]
trackle = "trackle.cli.main:main"

[project.optional-dependencies]
viz = ["matplotlib"]
rich = ["rich"]

[tool.setuptools.packages.find]
include = ["trackle*"]

